<resources>
    <string name="app_name">SeriesTV</string>
    <string name="connexion">Se Connecter</string>
    <string name="account">Mon compte</string>
    <string name="favorites">Mes favoris</string>
    <string name="lastUpdates">Mes dernières séries</string>
    <string name="home">Accueil</string>
    <string name="searchSerie">Rechercher une série</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">Email</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Se Connecter</string>
    <string name="error_invalid_email">Email invalide</string>
    <string name="error_invalid_password">Mot de pass trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Champ requis</string>
    <string name="logout">Se Déconnecter</string>
    <string name="userLoggedOut">Vous avez bien été déconnecté.</string>
</resources>
